--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-5">
     <div class="text-center">
+            <img src="logo.png" alt="Logo TPV" class="img-fluid my-1" style="max-width: 200px;">
             <h1 class="display-4 fw-bold">Bienvenido a TPV System</h1>
             <p class="lead">Tu sistema de gestión de ventas y stock, rápido y fácil de usar.</p>
-            <img src="assets/logo.png" alt="Logo TPV" class="img-fluid my-4" style="max-width: 200px;">
             <div>
                 <a routerLink="/ventas" class="btn btn-primary btn-lg me-2">Ir a Ventas</a>
                 <a routerLink="/productos" class="btn btn-outline-secondary btn-lg">Ver Productos</a>
